# bencode-py

./: .gitignore  README.md  pyproject.toml
bencode/: __init__.py  decode.py
docs/: doc.txt
src/bencode/: __init__.py  decode.py  encode.py
src/bencode.egg-info/: PKG-INFO  SOURCES.txt
tests/: decode_tests.py
