[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bencode"
version = "0.0.1"
authors = [
  { name="Goncalo Azevedo", email="goncalooazevedo@outlook.com" },
]
description = "A package to encode and decode bencoded data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vugonz/bencode"
"Bug Tracker" = "https://github.com/vugonz/bencode/issues"
"Source" = "https://github.com/vugonz/bencode/"


